@@ -38,6 +38,51 @@ public class StatementTest extends TestBase
    }
 
    /**
+    * Regression test for bug #528, ResultSet not getting populated correctly
+    * with autogenerated keys.
+    */
+   public void testBug528()
+      throws Exception
+   {
+      Statement sta = con.createStatement();
+      sta.executeUpdate( "create table #Bug528 (A int identity(11,1) not null, B varchar(10))" );
+
+      boolean result = sta.execute( "insert into #Bug528(B) values ('test');" +  // Update Count: 1
+                                    "insert into #Bug528(B) values ('test');" +  // Update Count: 1
+                                    "select * from #Bug528",                     // ResultSet: [11, test] [12, test]
+                                    Statement.RETURN_GENERATED_KEYS );           // Generated Keys: 12
+
+      // dumpAll( sta, result );
+
+      assertFalse( result );                    // first is an update count for 1st insert
+      assertEquals( 1, sta.getUpdateCount() );  // check update count
+      assertFalse( sta.getMoreResults() );      // next is an update count for 2nd insert
+      assertEquals( 1, sta.getUpdateCount() );  // check update count
+      assertTrue( sta.getMoreResults()  );      // resultset generated by select (this used to fail)
+
+      // get and check resultset
+      ResultSet res = sta.getResultSet();
+      assertTrue( res.next() );
+      assertEquals( 11, res.getInt( 1 ) );
+      assertEquals( "test", res.getString( 2 ) );
+      assertTrue( res.next() );
+      assertEquals( 12, res.getInt( 1 ) );
+      assertEquals( "test", res.getString( 2 ) );
+      assertFalse( res.next() );
+
+      // now check generated keys
+      res = sta.getGeneratedKeys();
+   // FIXME: the driver is not yet able to return generated keys for anything but the last update
+   // assertTrue( res.next() );
+   // assertEquals( 11, res.getInt( 1 ) );
+      assertTrue( res.next() );
+      assertEquals( 12, res.getInt( 1 ) );
+      assertFalse( res.next() );
+
+      sta.close();
+   }
+
+   /**
     * Test for bug #559, unique constraint violation error hidden by an internal
     * jTDS error.
     */
